--- a/config/nginx/api.viridial.com.conf
+++ b/config/nginx/api.viridial.com.conf
@@ -1,25 +1,10 @@
 # API Gateway - Production
 # https://api.viridial.com
+# Note: Certbot mettra à jour cette configuration automatiquement pour ajouter HTTPS
 
 server {
     listen 80;
     server_name api.viridial.com;
-    
-    # Redirection HTTPS
-    return 301 https://$server_name$request_uri;
-}
-
-server {
-    listen 443 ssl http2;
-    server_name api.viridial.com;
-
-    ssl_certificate /etc/ssl/certs/viridial.com.crt;
-    ssl_certificate_key /etc/ssl/private/viridial.com.key;
-    
-    # SSL Configuration
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers on;
 
     # Logs
     access_log /var/log/nginx/api.viridial.com.access.log;
@@ -40,8 +25,8 @@ server {
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
         
-        # CORS Headers
-        add_header Access-Control-Allow-Origin https://app.viridial.com always;
+        # CORS Headers (sera mis à jour par certbot pour HTTPS)
+        add_header Access-Control-Allow-Origin http://app.viridial.com always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
         add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
         
