--- a/config/nginx/app.viridial.com.conf
+++ b/config/nginx/app.viridial.com.conf
@@ -1,25 +1,10 @@
 # Frontend Application - Production
 # https://app.viridial.com
+# Note: Certbot mettra à jour cette configuration automatiquement pour ajouter HTTPS
 
 server {
     listen 80;
     server_name app.viridial.com;
-    
-    # Redirection HTTPS
-    return 301 https://$server_name$request_uri;
-}
-
-server {
-    listen 443 ssl http2;
-    server_name app.viridial.com;
-
-    ssl_certificate /etc/ssl/certs/viridial.com.crt;
-    ssl_certificate_key /etc/ssl/private/viridial.com.key;
-    
-    # SSL Configuration
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers on;
 
     # Root directory
     root /var/www/viridial-app/dist;
@@ -46,9 +31,9 @@ server {
         }
     }
 
-    # API proxy
+    # API proxy (sera mis à jour par certbot pour HTTPS)
     location /api {
-        proxy_pass https://api.viridial.com;
+        proxy_pass http://api.viridial.com;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
