--- a/config/nginx/api.viridial.com.conf
+++ b/config/nginx/api.viridial.com.conf
@@ -40,5 +40,19 @@ server {
         proxy_pass http://localhost:8080/actuator/health;
         access_log off;
     }
+
+    # Error pages
+    error_page 404 /404.html;
+    error_page 500 502 503 504 /50x.html;
+    
+    location = /404.html {
+        root /opt/source/realestate/public;
+        internal;
+    }
+    
+    location = /50x.html {
+        root /opt/source/realestate/public;
+        internal;
+    }
 }
 
