--- a/config/nginx/app.viridial.com.conf
+++ b/config/nginx/app.viridial.com.conf
@@ -39,5 +39,19 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+
+    # Error pages
+    error_page 404 /404.html;
+    error_page 500 502 503 504 /50x.html;
+    
+    location = /404.html {
+        root /opt/source/realestate/public;
+        internal;
+    }
+    
+    location = /50x.html {
+        root /opt/source/realestate/public;
+        internal;
+    }
 }
 
