--- a/config/nginx/api.viridial.com.conf
+++ b/config/nginx/api.viridial.com.conf
@@ -21,9 +21,12 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         
         # Timeouts
-        proxy_connect_timeout 60s;
+        proxy_connect_timeout 5s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
+        
+        # Gestion des erreurs backend
+        proxy_intercept_errors on;
         
         # CORS Headers (sera mis à jour par certbot pour HTTPS)
         add_header Access-Control-Allow-Origin http://app.viridial.com always;
@@ -53,6 +56,12 @@ server {
     location = /50x.html {
         root /opt/source/realestate/public;
         internal;
+    }
+    
+    # Fallback si le backend n'est pas disponible
+    location @backend_down {
+        root /opt/source/realestate/public;
+        try_files /50x.html =502;
     }
 }
 
