--- a/pom.xml
+++ b/pom.xml
@@ -30,16 +30,17 @@
 
     <modules>
         <module>gateway</module>
-        <module>services/identity-service</module>
-        <module>services/organization-service</module>
-        <module>services/resource-service</module>
-        <module>services/property-service</module>
-        <module>services/document-service</module>
-        <module>services/workflow-service</module>
-        <module>services/audit-service</module>
-        <module>services/notification-service</module>
-        <module>services/emailing-service</module>
-        <module>services/billing-service</module>
+        <!-- Services à créer progressivement -->
+        <!-- <module>services/identity-service</module> -->
+        <!-- <module>services/organization-service</module> -->
+        <!-- <module>services/resource-service</module> -->
+        <!-- <module>services/property-service</module> -->
+        <!-- <module>services/document-service</module> -->
+        <!-- <module>services/workflow-service</module> -->
+        <!-- <module>services/audit-service</module> -->
+        <!-- <module>services/notification-service</module> -->
+        <!-- <module>services/emailing-service</module> -->
+        <!-- <module>services/billing-service</module> -->
     </modules>
 
     <parent>
