--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -22,13 +22,7 @@
             <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
 
-        <!-- Security (désactivé pour l'instant pour faciliter les tests) -->
-        <!--
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
-        -->
+        <!-- Spring Security WebFlux (pour Spring Cloud Gateway) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
