--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -41,6 +41,21 @@ spring:
           uri: http://localhost:8087
           predicates:
             - Path=/api/notifications/**
+        
+        - id: emailing-service
+          uri: http://localhost:8088
+          predicates:
+            - Path=/api/emails/**
+        
+        - id: audit-service
+          uri: http://localhost:8089
+          predicates:
+            - Path=/api/audit/**
+        
+        - id: billing-service
+          uri: http://localhost:8090
+          predicates:
+            - Path=/api/billing/**
 
       management:
   endpoints:
