--- a/services/emailing-service/src/main/resources/application.yml
+++ b/services/emailing-service/src/main/resources/application.yml
@@ -27,6 +27,11 @@ spring:
       password: ${SPRING_DATA_REDIS_PASSWORD:}
       database: ${SPRING_DATA_REDIS_DATABASE:0}
   
+  kafka:
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+    consumer:
+      group-id: ${KAFKA_GROUP_ID:emailing-service-group}
+  
   mail:
     host: ${SPRING_MAIL_HOST:smtp.hostinger.com}
     port: ${SPRING_MAIL_PORT:465}
@@ -68,4 +73,27 @@ springdoc:
   swagger-ui:
     path: /swagger-ui.html
     enabled: true
+
+# Inter-Service Communication
+services:
+  identity:
+    url: ${IDENTITY_SERVICE_URL:http://localhost:8081}
+  internal:
+    auth-token: ${SERVICE_AUTH_TOKEN:}
+
+# Resilience4j Configuration
+resilience4j:
+  enabled: true
+  circuitbreaker:
+    instances:
+      identityService:
+        failureRateThreshold: 50
+        waitDurationInOpenState: 30s
+        slidingWindowSize: 10
+        minimumNumberOfCalls: 5
+  retry:
+    instances:
+      identityService:
+        maxAttempts: 3
+        waitDuration: 500ms
 
