--- a/services/workflow-service/pom.xml
+++ b/services/workflow-service/pom.xml
@@ -75,6 +75,12 @@
             <version>2.3.0</version>
         </dependency>
 
+        <!-- Spring Kafka (Consumer + Producer) -->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
