--- a/frontend/admin/package.json
+++ b/frontend/admin/package.json
@@ -10,15 +10,19 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@types/leaflet": "^1.9.21",
+    "@types/leaflet.markercluster": "^1.5.6",
     "@unovis/ts": "^1.6.2",
     "@unovis/vue": "^1.6.2",
     "@vee-validate/zod": "^4.15.1",
-    "@viridial/shared": "^1.0.34",
+    "@viridial/shared": "^1.0.41",
     "@vueuse/core": "^10.11.1",
     "axios": "^1.6.7",
     "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "lucide-vue-next": "^0.344.0",
     "pinia": "^2.1.7",
     "radix-vue": "^1.9.0",
