init backend front public

--- a/services/identity-service/src/main/resources/application.yml
+++ b/services/identity-service/src/main/resources/application.yml
@@ -72,4 +72,11 @@ springdoc:
 services:
   billing:
     url: ${BILLING_SERVICE_URL:http://localhost:8090}
+  emailing:
+    url: ${EMAILING_SERVICE_URL:http://localhost:8088}
+
+# Application URLs
+app:
+  frontend:
+    url: ${FRONTEND_URL:http://localhost:3003}
 
