--- a/config/nginx/api.viridial.com.conf
+++ b/config/nginx/api.viridial.com.conf
@@ -19,6 +19,9 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        # Important pour HTTPS : s'assurer que Spring Boot sait qu'il est derrière HTTPS
+        proxy_set_header X-Forwarded-Port $server_port;
+        proxy_set_header X-Forwarded-Host $host;
         
         # Timeouts
         proxy_connect_timeout 5s;
