--- a/frontend/admin/tsconfig.json
+++ b/frontend/admin/tsconfig.json
@@ -15,10 +15,12 @@
     "jsx": "preserve",
 
     /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "strict": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
+    "skipDefaultLibCheck": true,
+    "ignoreDeprecations": "5.0",
 
     /* Path aliases */
     "baseUrl": ".",
