--- a/config/nginx/admin.viridial.com.conf
+++ b/config/nginx/admin.viridial.com.conf
@@ -5,7 +5,7 @@
 
 server {
     listen 80;
-    server_name admin.viridial.com;
+    server_name admin.viridial.com www.admin.viridial.com;
 
     # Redirection HTTPS (sera activée après configuration SSL)
     # return 301 https://$server_name$request_uri;
@@ -94,7 +94,7 @@ server {
 # Configuration HTTPS (sera activée après configuration SSL avec Certbot)
 # server {
 #     listen 443 ssl http2;
-#     server_name admin.viridial.com;
+#     server_name admin.viridial.com www.admin.viridial.com;
 #
 #     ssl_certificate /etc/letsencrypt/live/admin.viridial.com/fullchain.pem;
 #     ssl_certificate_key /etc/letsencrypt/live/admin.viridial.com/privkey.pem;
