--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -169,7 +169,7 @@ logging:
 
 # CORS Configuration
 cors:
-  allowed-origins: http://localhost:3000,http://localhost:3001,http://localhost:3003,http://localhost:5173,http://localhost:5174
+  allowed-origins: http://localhost:3000,http://localhost:3001,http://localhost:3003,http://localhost:5173,http://localhost:5174,https://viridial.com,https://www.viridial.com,https://admin.viridial.com,https://www.admin.viridial.com,https://app.viridial.com,https://api.viridial.com
   allowed-methods: GET,POST,PUT,DELETE,PATCH,OPTIONS
   allowed-headers: Authorization,Content-Type,X-Requested-With,Accept,Origin
   allow-credentials: true
